build: remove dependencies and fix gradle run