@@ -1,7 +1,5 @@
 buildscript {
     dependencies {
-        classpath 'edu.sc.seis.launch4j:launch4j:3.0.5'
-        classpath 'com.bmuschko:gradle-izpack-plugin:3.2'
         classpath "com.github.ben-manes:gradle-versions-plugin:0.39.0"
     }
 }
@@ -9,9 +7,11 @@ buildscript {
 plugins {
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.1.0'
-    id 'edu.sc.seis.launch4j' version '3.0.5'
     id 'com.github.ben-manes.versions' version '0.39.0'
-    id 'com.bmuschko.izpack' version '3.0'
+}
+
+application {
+    applicationDefaultJvmArgs = ['--add-opens=java.base/java.nio=ALL-UNNAMED']
 }
 
 configurations.all {
@@ -67,8 +67,6 @@ ext.mainClass = 'org.quelea.windows.main.MainStub'
 
 task copyToDist {
     doLast {
-        copy {from configurations.runtimeClasspath into project.distdir + "/libjfx" include "javafx*" } // all JavaFX libraries
-        copy {from configurations.runtimeClasspath into project.distdir + "/lib" exclude "javafx*" } // all libraries except JavaFX libraries
         copy {from "themes" into project.distdir + "/themes"}
         copy {from "icons" into project.distdir + "/icons"}
         copy {from "bibles" into project.distdir + "/bibles"}
@@ -87,7 +85,6 @@ task copyToDist {
         copy {from file("scheduleformat.xsl") into file(project.distdir)}
         copy {from file("songformat.xsl") into file(project.distdir)}
         copy {from file("fopcfg.xml") into file(project.distdir)}
-        copy {from file("build-install.sh") into file(project.distdir)}
         copy {from file("licenses/gplv3.txt") into file(project.distdir) rename { String filename -> return "LICENSE.txt"}}
         copy {from file("licenses/copyright") into file(project.distdir + "/queleadoc")}
     }
@@ -162,12 +159,17 @@ dependencies {
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.8.2'
 }
 
+mainClassName = 'org.quelea.windows.main.MainStub'
 jar {
+    duplicatesStrategy = duplicatesStrategy.EXCLUDE
+    
     manifest {
         attributes (
                 'Main-Class': 'org.quelea.windows.main.MainStub',
-                "Class-Path": configurations.runtimeClasspath.collect { "lib/" + it.getName() }.join(' ')
-        )
+        )    
+    }
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
 }
 
